--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=`, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>Kristoffer James Bomediano</h1>
+    <p>Welcome to my Website</p>
+    <img src="pedro.png" width="300px" />
   </body>
 </html>
